# libmediasoup

./: CMakeLists.txt  Makefile
src/: Settings-win.cpp  main-win.cpp
test/: CMakeLists.txt  main.cpp
worker-2.4.3/: README.md  mediasoup-worker.gyp
worker-2.4.3/src/: mediasoup_worker_api.cpp
x64-ubuntu18-gcc/include/: mediasoup_worker_api.hpp
